--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <button onclick="nextLevel()">Next Level ➡️</button>
     </div>
 
-    <script src="script.js"></script>
+   <script>
+  function nextLevel() {
+    alert("Bir sonraki level için hazır ol! 💫 \n(Devam sayfalarını ekleyebilirsin!)");
+  }
+</script>
+
 </body>
 </html>
