--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <p>Multiplayer hayatımın en iyi oyuncususun 💖</p>
         <button onclick="nextLevel()">Next Level ➡️</button>
     </div>
-
+    
+<button onclick="window.location.href='level26.html'">Next Level ➡️</button>
 
 </body>
 </html>
