--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>LVL 25 - Multiplayer Life</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <audio autoplay loop>
-        <source src="i_wanna_be_yours.mp3" type="audio/mpeg">
+        <source src="i_wanna_be_yours.mp3" type="audio/mpeg" />
         Your browser does not support the audio element.
     </audio>
 
     <div class="container">
         <h1>🎮 Level 25'e Hoş Geldin</h1>
         <p>Multiplayer hayatımın en iyi oyuncususun 💖</p>
-        <button onclick="nextLevel()">Next Level ➡️</button>
+        <!-- Tek buton, level26.html sayfasına yönlendirme yapıyor -->
+        <button onclick="window.location.href='level26.html'">Next Level ➡️</button>
     </div>
-    
-<button onclick="window.location.href='level26.html'">Next Level ➡️</button>
 
+    <!-- Eğer script.js dosyan varsa buraya ekle -->
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
