--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
 <body>
     <audio autoplay loop>
         <source src="i_wanna_be_yours.mp3" type="audio/mpeg" />
-        Your browser does not support the audio element.
+        Tarayıcınız ses oynatmayı desteklemiyor.
     </audio>
 
     <div class="container">
         <h1>🎮 Level 25'e Hoş Geldin</h1>
         <p>Multiplayer hayatımın en iyi oyuncususun 💖</p>
-        <!-- Tek buton, level26.html sayfasına yönlendirme yapıyor -->
+
+        <button onclick="window.location.href='level24.html'">⬅️ Last Level</button>
         <button onclick="window.location.href='level26.html'">Next Level ➡️</button>
     </div>
-
-    <!-- Eğer script.js dosyan varsa buraya ekle -->
-    <!-- <script src="script.js"></script> -->
 </body>
 </html>
