--- a/index.html
+++ b/index.html
@@ -6,10 +6,27 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <audio autoplay loop>
-        <source src="i_wanna_be_yours.mp3" type="audio/mpeg" />
-        Tarayıcınız ses oynatmayı desteklemiyor.
-    </audio>
+   <div class="container">
+    <h1>🎮 Level 25'e Hoş Geldin</h1>
+    <p>Multiplayer hayatımın en iyi oyuncususun 💖</p>
+
+    <button onclick="goToLevel('level24.html')">⬅️ Last Level</button>
+    <button onclick="goToLevel('level26.html')">Next Level ➡️</button>
+</div>
+
+<script>
+    function goToLevel(url) {
+        const audio = new Audio('i_wanna_be_yours.mp3');
+        audio.loop = true;
+        audio.play().then(() => {
+            // Müzik başladıktan sonra sayfa yönlendir
+            window.location.href = url;
+        }).catch((e) => {
+            console.error('Müzik çalınamadı:', e);
+            window.location.href = url;
+        });
+    }
+</script>
 
     <div class="container">
         <h1>🎮 Level 25'e Hoş Geldin</h1>
