--- a/index.html
+++ b/index.html
@@ -6,30 +6,36 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <!-- Müzik etiketi -->
+    <!-- Müzik -->
     <audio id="bg-music" loop>
         <source src="i_wanna_be_yours.mp3" type="audio/mpeg" />
         Tarayıcınız ses çalmayı desteklemiyor.
     </audio>
 
+    <!-- Ana içerik -->
     <div class="container">
         <h1>🎮 Level 25'e Hoş Geldin</h1>
         <p>Multiplayer hayatımın en iyi oyuncususun 💖</p>
 
-        <!-- Ses başlat + sayfa yönlendirme -->
-        <button onclick="playMusicAndGo('level24.html')">⬅️ Last Level</button>
-        <button onclick="playMusicAndGo('level26.html')">Next Level ➡️</button>
+        <button onclick="goToLevel('level24.html')">⬅️ Last Level</button>
+        <button onclick="goToLevel('level26.html')">Next Level ➡️</button>
     </div>
 
     <script>
-        function playMusicAndGo(url) {
-            const music = document.getElementById("bg-music");
-            music.play().catch((e) => {
-                console.log("Müzik oynatılamadı:", e);
-            });
-            setTimeout(() => {
+        function goToLevel(url) {
+            const audio = document.getElementById("bg-music");
+
+            // Kullanıcı etkileşimiyle müziği başlat
+            audio.play().then(() => {
+                // Müzik başladıktan 1 saniye sonra yönlendir
+                setTimeout(() => {
+                    window.location.href = url;
+                }, 1000);
+            }).catch((e) => {
+                console.log("Müzik çalınamadı:", e);
+                // Eğer müzik çalmazsa direkt yönlendir
                 window.location.href = url;
-            }, 500); // 0.5 saniye sonra yönlendir, müzik başlasın
+            });
         }
     </script>
 </body>
