--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
 <body>
     <!-- Müzik -->
     <audio id="bg-music" loop>
-        <source src="i_wanna_be_yours.mp3" type="audio/mpeg">
+        <source src="i_wanna_be_yours.mp3" type="audio/mpeg" />
         Tarayıcınız ses çalmayı desteklemiyor.
     </audio>
 
-    <!-- Müzik Açma / Durdurma Butonu -->
+    <!-- Müzik kontrol butonu -->
     <button id="music-toggle" title="Müziği Aç/Kapat">🎧</button>
 
-    <!-- Ana içerik -->
+    <!-- Sayfa içeriği (sadece 1 kez!) -->
     <div class="container">
         <h1>🎮 Level 25'e Hoş Geldin</h1>
         <p>Multiplayer hayatımın en iyi oyuncususun 💖</p>
+
         <button onclick="window.location.href='level24.html'">⬅️ Last Level</button>
         <button onclick="window.location.href='level26.html'">Next Level ➡️</button>
     </div>
