--- a/index.html
+++ b/index.html
@@ -5,15 +5,34 @@
     <title>LVL 25 - Multiplayer Life</title>
     <link rel="stylesheet" href="style.css" />
     <style>
+        /* Müzik butonu stil */
         #music-toggle {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            font-size: 28px;
+            font-size: 48px;
             cursor: pointer;
-            z-index: 999;
-            background: none;
             border: none;
+            background: none;
+            margin-bottom: 10px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            transition: transform 0.3s ease;
+        }
+
+        #music-toggle:hover {
+            transform: scale(1.2);
+            opacity: 0.8;
+        }
+
+        .container {
+            text-align: center;
+            padding: 40px;
+        }
+
+        button {
+            margin: 10px;
+            padding: 10px 20px;
+            font-size: 18px;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -24,14 +43,15 @@
         Tarayıcınız ses çalmayı desteklemiyor.
     </audio>
 
-    <!-- Müzik kontrol butonu -->
-    <button id="music-toggle" title="Müziği Aç/Kapat">🎧</button>
-
-    <!-- Sayfa içeriği (sadece 1 kez!) -->
     <div class="container">
+        <!-- Müzik kontrol butonu -->
+        <button id="music-toggle" title="Tıklayarak müziği aç/kapat">🔊</button>
+
+        <!-- Başlık ve açıklama -->
         <h1>🎮 Level 25'e Hoş Geldin</h1>
         <p>Multiplayer hayatımın en iyi oyuncususun 💖</p>
 
+        <!-- Butonlar -->
         <button onclick="window.location.href='level24.html'">⬅️ Last Level</button>
         <button onclick="window.location.href='level26.html'">Next Level ➡️</button>
     </div>
@@ -44,13 +64,4 @@
         toggleBtn.addEventListener('click', () => {
             if (isPlaying) {
                 music.pause();
-                toggleBtn.textContent = '🎧';
-            } else {
-                music.play();
-                toggleBtn.textContent = '🔊';
-            }
-            isPlaying = !isPlaying;
-        });
-    </script>
-</body>
-</html>
+                toggleBtn.textConte
