--- a/index.html
+++ b/index.html
@@ -5,75 +5,74 @@
     <title>LVL 25 - Multiplayer Life</title>
     <link rel="stylesheet" href="style.css" />
     <style>
-        /* Müzik butonu stil */
         #music-toggle {
             font-size: 48px;
             cursor: pointer;
-            border: none;
-            background: none;
-            margin-bottom: 10px;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
             transition: transform 0.3s ease;
+            position: absolute;
+            top: 20px;
+            left: 20px;
         }
 
         #music-toggle:hover {
             transform: scale(1.2);
-            opacity: 0.8;
         }
 
         .container {
             text-align: center;
-            padding: 40px;
+            margin-top: 150px;
         }
 
         button {
             margin: 10px;
             padding: 10px 20px;
-            font-size: 18px;
+            font-size: 16px;
             cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <!-- Müzik -->
+
+    <!-- Müzik kontrol ikonu -->
+    <div id="music-toggle">🔊</div>
+
+    <!-- Müzik elementi (gizli) -->
     <audio id="bg-music" loop>
         <source src="i_wanna_be_yours.mp3" type="audio/mpeg" />
         Tarayıcınız ses çalmayı desteklemiyor.
     </audio>
 
+    <!-- Ana içerik -->
     <div class="container">
-        <!-- Müzik kontrol butonu -->
-        <button id="music-toggle" title="Tıklayarak müziği aç/kapat">🔊</button>
-
-        <!-- Başlık ve açıklama -->
         <h1>🎮 Level 25'e Hoş Geldin</h1>
         <p>Multiplayer hayatımın en iyi oyuncususun 💖</p>
 
-        <!-- Butonlar -->
         <button onclick="window.location.href='level24.html'">⬅️ Last Level</button>
         <button onclick="window.location.href='level26.html'">Next Level ➡️</button>
     </div>
 
-   <script>
-    const music = document.getElementById('bg-music');
-    const toggleBtn = document.getElementById('music-toggle');
-    let isPlaying = false;
+    <!-- Müzik kontrol scripti -->
+    <script>
+        const music = document.getElementById('bg-music');
+        const toggleBtn = document.getElementById('music-toggle');
+        let isPlaying = false;
 
-    toggleBtn.addEventListener('click', async () => {
-        try {
-            if (isPlaying) {
-                music.pause();
-                toggleBtn.textContent = '🔊';
-            } else {
-                await music.play();
-                toggleBtn.textContent = '🤍';
+        toggleBtn.addEventListener('click', async () => {
+            try {
+                if (isPlaying) {
+                    music.pause();
+                    toggleBtn.textContent = '🔊';
+                } else {
+                    await music.play();
+                    toggleBtn.textContent = '🤍';
+                }
+                isPlaying = !isPlaying;
+            } catch (e) {
+                console.error("Müzik çalınamadı:", e);
+                alert("Müzik çalınamadı. Tarayıcının ses izni verdiğinden emin ol.");
             }
-            isPlaying = !isPlaying;
-        } catch (e) {
-            console.error("Müzik çalınamadı:", e);
-            alert("Müzik çalınırken bir hata oluştu. Lütfen sesi açtığından ve tarayıcı izin verdiğinden emin ol.");
-        }
-    });
-</script>
+        });
+    </script>
+
+</body>
+</html>
