--- a/index.html
+++ b/index.html
@@ -5,74 +5,60 @@
     <title>LVL 25 - Multiplayer Life</title>
     <link rel="stylesheet" href="style.css" />
     <style>
-        #music-toggle {
-            font-size: 48px;
-            cursor: pointer;
-            transition: transform 0.3s ease;
-            position: absolute;
-            top: 20px;
-            left: 20px;
-        }
-
-        #music-toggle:hover {
-            transform: scale(1.2);
-        }
-
-        .container {
-            text-align: center;
-            margin-top: 150px;
-        }
-
-        button {
-            margin: 10px;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
+      #sound-icon {
+        font-size: 50px;
+        cursor: pointer;
+        user-select: none;
+        margin-bottom: 20px;
+        transition: transform 0.3s ease;
+      }
+      #sound-icon:hover {
+        transform: scale(1.2);
+      }
     </style>
 </head>
 <body>
+   <div class="container">
+      <div id="sound-icon" title="Müziği Aç/Kapat">🔊</div>
 
-    <!-- Müzik kontrol ikonu -->
-    <div id="music-toggle">🔊</div>
+      <h1>🎮 Level 25'e Hoş Geldin</h1>
+      <p>Multiplayer hayatımın en iyi oyuncususun 💖</p>
 
-    <!-- Müzik elementi (gizli) -->
-    <audio id="bg-music" loop>
-        <source src="i_wanna_be_yours.mp3" type="audio/mpeg" />
-        Tarayıcınız ses çalmayı desteklemiyor.
-    </audio>
+      <button onclick="window.location.href='level24.html'">⬅️ Last Level</button>
+      <button onclick="window.location.href='level26.html'">Next Level ➡️</button>
+   </div>
 
-    <!-- Ana içerik -->
-    <div class="container">
-        <h1>🎮 Level 25'e Hoş Geldin</h1>
-        <p>Multiplayer hayatımın en iyi oyuncususun 💖</p>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const audio = new Audio('i_wanna_be_yours.mp3');
+    audio.loop = true;
 
-        <button onclick="window.location.href='level24.html'">⬅️ Last Level</button>
-        <button onclick="window.location.href='level26.html'">Next Level ➡️</button>
-    </div>
+    // localStorage'dan müzik durumunu oku
+    const isPlaying = localStorage.getItem('musicPlaying') === 'true';
 
-    <!-- Müzik kontrol scripti -->
-    <script>
-        const music = document.getElementById('bg-music');
-        const toggleBtn = document.getElementById('music-toggle');
-        let isPlaying = false;
+    const soundIcon = document.getElementById('sound-icon');
 
-        toggleBtn.addEventListener('click', async () => {
-            try {
-                if (isPlaying) {
-                    music.pause();
-                    toggleBtn.textContent = '🔊';
-                } else {
-                    await music.play();
-                    toggleBtn.textContent = '🤍';
-                }
-                isPlaying = !isPlaying;
-            } catch (e) {
-                console.error("Müzik çalınamadı:", e);
-                alert("Müzik çalınamadı. Tarayıcının ses izni verdiğinden emin ol.");
-            }
-        });
-    </script>
+    if (isPlaying) {
+      audio.play().catch(() => {
+        console.log('Müzik otomatik çalamadı, kullanıcıdan tıklama bekleniyor.');
+      });
+      soundIcon.textContent = '🤍';
+    } else {
+      soundIcon.textContent = '🔊';
+    }
 
+    soundIcon.addEventListener('click', () => {
+      if (audio.paused) {
+        audio.play();
+        localStorage.setItem('musicPlaying', 'true');
+        soundIcon.textContent = '🤍';
+      } else {
+        audio.pause();
+        localStorage.setItem('musicPlaying', 'false');
+        soundIcon.textContent = '🔊';
+      }
+    });
+  });
+</script>
 </body>
 </html>
