--- a/level26.html
+++ b/level26.html
@@ -4,9 +4,24 @@
   <meta charset="UTF-8" />
   <title>LVL 26 - Yeni Macera</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    #sound-icon {
+      font-size: 50px;
+      cursor: pointer;
+      user-select: none;
+      margin-bottom: 20px;
+      transition: transform 0.3s ease;
+      display: inline-block;
+    }
+    #sound-icon:hover {
+      transform: scale(1.2);
+    }
+  </style>
 </head>
 <body>
   <div class="container">
+    <div id="sound-icon" title="Müziği Aç/Kapat">🔊</div>
+
     <h1>🎉 Level 26 - Yeni Macera Başlıyor!</h1>
     <p>Burada yeni anılar, fotoğraflar ve sürprizler olacak.</p>
 
@@ -17,5 +32,38 @@
     <button onclick="window.location.href='index.html'">⬅️ Geri Dön</button>
     <button onclick="alert('Bir sonraki level yakında!')">Next Level ➡️</button>
   </div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const audio = new Audio('i_wanna_be_yours.mp3');
+    audio.loop = true;
+
+    // localStorage'dan müzik durumunu oku
+    const isPlaying = localStorage.getItem('musicPlaying') === 'true';
+
+    const soundIcon = document.getElementById('sound-icon');
+
+    if (isPlaying) {
+      audio.play().catch(() => {
+        console.log('Müzik otomatik çalamadı, kullanıcıdan tıklama bekleniyor.');
+      });
+      soundIcon.textContent = '🤍';
+    } else {
+      soundIcon.textContent = '🔊';
+    }
+
+    soundIcon.addEventListener('click', () => {
+      if (audio.paused) {
+        audio.play();
+        localStorage.setItem('musicPlaying', 'true');
+        soundIcon.textContent = '🤍';
+      } else {
+        audio.pause();
+        localStorage.setItem('musicPlaying', 'false');
+        soundIcon.textContent = '🔊';
+      }
+    });
+  });
+</script>
 </body>
 </html>
