--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ Senin gözlerine baktığımda hep aynı şeyi hissediyorum. Bu oyun, seninle 
  
 Nice seviye atlamalara, nice iddialara, nice kahkahalarına, nice scratch oyunlarına, nice konyalılara…  
 Seni çok seviyorum. Ve iyi ki doğdun, Komodo ejderim. Seninle hayat, tüm bug’lara rağmen mükemmel bir oyun.
-Birlikte daha nice seviye atlayacağız. Ve her level’de daha da çok seveceğim seni.
-Level 25 unlocked. Player 2 ready. Let’s play forever. 🎮💖👾🎉
+Birlikte daha nice seviye atlayacağız. Ve her level’de daha da çok seveceğim seni.<br><br>
+Level 25 unlocked.<br><br> Player 2 ready.<br><br> Let’s play forever. 🎮💖👾🎉
     </div>
   </div>
 
