--- a/level26.html
+++ b/level26.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <title>LVL 26 - Yeni Macera</title>
+  <title>Yeni Macera</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     #sound-icon {
@@ -22,12 +22,12 @@
   <div class="container">
     <div id="sound-icon" title="Müziği Aç/Kapat">🔊</div>
 
-    <h1>🎉 Level 26 - Yeni Macera Başlıyor!</h1>
-    <p>Burada yeni anılar, fotoğraflar ve sürprizler olacak.</p>
+    <h1>🎉 Yeni Macera Başlıyor!</h1>
+    <p>Burada yeni anılarımız, fotoğraflarımız olacak ♡ </p>
 
     <!-- Örnek resim ve metin -->
-    <img src="dog.jpg" alt="Sevdiğimiz Köpek" style="max-width: 300px; border-radius: 10px;" />
-    <p>İkinci seviyede seni özel anılarımız bekliyor!</p>
+    <img src="kalp.jpg" alt="kalp" style="max-width: 300px; border-radius: 10px;" />
+    <p>Bu seviyede seni özel anılarımız bekliyor!</p>
 
     <button onclick="window.location.href='index.html'">⬅️ Geri Dön</button>
     <button onclick="alert('Bir sonraki level yakında!')">Next Level ➡️</button>
