--- a/level26.html
+++ b/level26.html
@@ -23,11 +23,11 @@
     <div id="sound-icon" title="Müziği Aç/Kapat">🔊</div>
 
     <h1>🎉 Yeni Macera Başlıyor!</h1>
-    <p>Burada yeni anılarımız, fotoğraflarımız olacak ♡ </p>
+    <p>Bu seviyede seni özel anılarımız bekliyor ♡ </p>
 
     <!-- Örnek resim ve metin -->
     <img src="kalp.png" alt="kalp" style="max-width: 300px; border-radius: 10px;" />
-    <p>Bu seviyede seni özel anılarımız bekliyor!</p>
+   
 
     <button onclick="window.location.href='index.html'">⬅️ Geri Dön</button>
     <button onclick="alert('Bir sonraki level yakında!')">Next Level ➡️</button>
