--- a/level26.html
+++ b/level26.html
@@ -22,7 +22,7 @@
   <div class="container">
     <div id="sound-icon" title="Müziği Aç/Kapat">🔊</div>
 
-    <h1>🎉 Yeni Macera Başlıyor!</h1>
+    <h1> Yeni Macera Başlıyor!</h1>
     <p>Bu seviyede seni özel anılarımız bekliyor ♡ </p>
 
     <!-- Örnek resim ve metin -->
