--- a/level26.html
+++ b/level26.html
@@ -26,7 +26,7 @@
     <p>Bu seviyede seni özel anılarımız bekliyor ♡ </p>
 
     <!-- Örnek resim ve metin -->
-    <img src="kalp.png" alt="kalp" style="max-width: 300px; border-radius: 10px;" />
+    <img src="kalp.png" alt="kalp" style="max-width: 300px; border-radius: 10px;" /> <br><br>
    
 
     <button onclick="window.location.href='index.html'">⬅️ Geri Dön</button>
