--- a/level26.html
+++ b/level26.html
@@ -24,7 +24,7 @@
    
 
     <h1> Yeni Macera Başlıyor!</h1>
-    <p>Bu seviyede seni özel anılarımız bekliyor ♡ </p>
+    <p>Bu seviyede seni özel anılarımız bekliyor ♡ </p> <br><br>
 
   
 
