--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
     <div id="letter-content">
      🎂 LVL 25 – Sana, Kalbimin Komodo Ejderine 💚<br><br>
      
-Bugün senin doğum günün. Level 25’e hoş geldin hayatım. Ama biliyorum, seninle geçen her gün zaten başlı başına bir seviye atlamak gibiydi.Seninle birlikteyken dünya biraz daha hızlı dönüyor sanki. Veya ben zamanı unutuyorum… <br><br>
-Seninle gülmek başka, seninle susmak bile güzel. Bazen sadece yüzüne bakıyorum ve içimden bir yer bu benim cücüğüm diyor. İçinde çocuk kalan koca bir kalpsin sen. Scratch adamım, seni o bilgisayar başında oyununa heyecanla bir şeyler kodlarken izlemek isterdim... Hayır daha cok dalga geçmek için değil aşkım. Senin her halinle gurur duyuyorum.Yamankoper’li, Kundakçı’lı tüm garip nicklerinle bile.
+Bugün senin doğum günün. Level 25’e hoş geldin hayatım. Ama biliyorum, seninle geçen her gün zaten başlı başına bir seviye atlamak gibiydi.<br><br>
+Seninle gülmek başka, seninle susmak bile güzel cücük. Koca bir kalpsin sen. Scratch adamım, seni her haline cok aşığım. Yamankoper’li, Kundakçı’lı, yavuz2000tekel'li tüm garip nicklerinle bile.
 Seninle geçen zamanlarda ne kadar çok gülüyorum diye düşündüğüm çok an oldu. odd derneğini “Abdullah Okula Destek Derneği” sanmana kahkaha atarken, Köpeğin ismini jübile sandığında… Ya da maviyle yeşili karıştırdığında, tüm sıpalıklarına cok aşığım…  <br><br>
-En çok da seni sevdiğimde gülüyorum. Çünkü seni sevmenin içinde bir neşe var. Pembe götlüler gibi yazıyorum ama sen bu şiirsel lafları en çok hak edensin ask yuvam. Minecraft filmine gittiğimiz günü hatırlıyor musun? Yanımızdaki çocuklar hayatlarının en heyecanlı anını yaşıyor gibiydi, bizse "bu ne şimdi?" bakışları atıyorduk birbirimize. Sen o filmi ciddiyetle izlemeye çalışırken ben sessizce gülüyordum çünkü biliyordum: sen aslında o çocuklardan birisin – sadece biraz daha uzun, biraz daha inatçı ve çok daha sevimli. O saçma film bile güzeldi çünkü sen vardın. Seninle hayat, zaman zaman çocuk filmi gibi anlamsız ama her sahnesiyle izlemeye değer. 
-Ben seninle tanıştığım günden beri, yanlışlarımın bile tatlı birer hikâyeye dönüştüğünü gördüm. Mesela yapay zekaya güvenip kanguruyu gerçek sanmam... Ya da... neyse, köpeğin bacağı😳😅 <br><br>
-Senin gülüşünü duymak için dünyanın bütün saçmalıklarını yaparım.  Çünkü sen güldüğünde, içimde bir yer çok güzel oluyor. Kahkana aşığım. Bu hayatta sana ne kadar sarılabilirsem… o kadar iyiyim.
-Senin gözlerine baktığımda hep aynı şeyi hissediyorum. Bu oyun, seninle oynandığında hayatımın en güzel oyunu. Hatalarla, kahkahalarla, yanlış anlaşılmalarla, sürpriz zaferlerle ve sonsuz sevgiyle… <br><br>
+Seni sevmenin içinde bir neşe var. Pembe götlüler gibi yazıyorum ama sen bu şiirsel lafları en çok hak edensin ask yuvam.  Minecraft filmine gittiğimiz günü hatırlıyor musun? Yanımızdaki çocuklar hayatlarının en heyecanlı anını yaşıyor gibiydi, bizse nereye düştük bakışları atıyorduk birbirimize. Sen o filmi ciddiyetle izlemeye çalışırken ben kendimi gülmemek için zor tutuyordum.  O saçma film bile güzeldi çünkü sen vardın. Seninle hayat, zaman zaman çocuk filmi gibi anlamsız ama her sahnesiyle izlemeye değer. 
+Ben seninle tanıştığım günden beri, yanlışlarımın bile tatlı birer hikâyeye dönüştüğünü gördüm.  deepfake üzerine çalışırken kanguruyu gerçek sanmam... Ya da... neyse, köpeğin bacağı😳 <br><br>
+Senin gülüşünü duymak için dünyanın bütün saçmalıklarını yaparım.  Çünkü sen güldüğünde, içimde bir yer çok güzel oluyor. Kahkana aşığım.  Bu hayatta sana ne kadar sarılabilirsem… o kadar iyiyim konyalım.
+Senin gözlerine baktığımda hep aynı şeyi hissediyorum. Bu oyun, seninle oynandığında hayatımın en güzel oyunu.  Hatalarla, kahkahalarla, yanlış anlaşılmalarla, sürpriz zaferlerle ve sonsuz sevgiyle… <br><br>
  
-Nice seviye atlamalara, nice iddialara, nice kahkahalarına, nice scratch oyunlarına, nice konyalılara…  
-Seni çok seviyorum. Ve iyi ki doğdun, Komodo ejderim. Seninle hayat, tüm bug’lara rağmen mükemmel bir oyun.
-Birlikte daha nice seviye atlayacağız. Ve her level’de daha da çok seveceğim seni.<br><br>
+Nice seviye atlamalara, nice iddialara, nice kahkahalarına, nice scratch oyunlarına…  
+Seni çok seviyorum. Ve iyi ki doğdun, Komodo ejderim.  Seninle hayat, tüm buglara rağmen mükemmel bir oyun.
+Birlikte daha nice seviye atlayacağız. Ve her level’de daha da çok seveceğim seni kocam.<br><br>
 Level 25 unlocked.<br><br> Player 2 ready.<br><br> Let’s play forever. 🎮💖👾🎉
     </div>
   </div>
