--- a/level24.html
+++ b/level24.html
@@ -29,13 +29,13 @@
         
     <section>
           <h2>🤗 İlk Çekindiğimiz Selfiemiz</h2>
-          <img src="ilk_selfie.jpg" alt="İlk Selfie" style="max-width: 100%; border-radius: 10px;" />
+          <img src="ilk_selfie.jpeg" alt="İlk Selfie" style="max-width: 100%; border-radius: 10px;" />
           <p>Utanarak çektiğimiz o an, şimdi en değerli fotoğrafımız.</p>
       </section>
 
       <section>
           <h2>🎭 Sanat Fuarı Selfiemiz</h2>
-          <img src="sanat_fuari_selfie.jpg" alt="Sanat Fuarında Selfie" style="max-width: 100%; border-radius: 10px;" />
+          <img src="sanat_fuari_selfie.jpeg" alt="Sanat Fuarında Selfie" style="max-width: 100%; border-radius: 10px;" />
           <p>O gün sanatın büyüsüyle dolduk, seninle olmak çok güzel.</p>
       </section>
 
