--- a/level24.html
+++ b/level24.html
@@ -201,5 +201,12 @@
     });
   });
 </script>
+
+    <script>
+  window.addEventListener('load', () => {
+    window.scrollTo(0, 0);
+  });
+</script>
+
 </body>
 </html>
