--- a/level24.html
+++ b/level24.html
@@ -149,10 +149,11 @@
             <section>
   <h2>𓆝 𓆡 𓃠 Hayvanlarimiz</h2>
   <div style="display:flex; gap: 20px; flex-wrap: wrap; justify-content: center;">
-    <img src="senin_cocukluk.jpg" alt="Senin Çocukluk Fotoğrafın" style="width: 150px; border-radius: 10px;" />
-    <img src="benim_cocukluk.jpg" alt="Benim Çocukluk Fotoğrafım" style="width: 150px; border-radius: 10px;" /> 
+    <img src="31.jpeg" alt="kedi" style="width: 150px; border-radius: 10px;" />
+    <img src="32.jpeg" alt="Bbalik" style="width: 150px; border-radius: 10px;" /> 
+      <img src="33.jpeg" alt="balık" style="width: 150px; border-radius: 10px;" /> 
   </div>
-  <p>abi iğne vuruyo msn (kolunu yerim)(ciddi)</p>
+  <p>gölge vivi pırtık.. </p>
 </section>
 
 
