--- a/level24.html
+++ b/level24.html
@@ -153,7 +153,7 @@
     <img src="32.jpeg" alt="Bbalik" style="width: 150px; border-radius: 10px;" /> 
       <img src="33.jpeg" alt="balık" style="width: 150px; border-radius: 10px;" /> 
   </div>
-  <p>gölge vivi pırtık.. </p>
+  <p>gölge, vivi(ve kakaları), pırtık </p>
 </section>
 
 
