--- a/level24.html
+++ b/level24.html
@@ -16,6 +16,20 @@
       #sound-icon:hover {
         transform: scale(1.2);
       }
+
+        section {
+      border: 2px solid #ccc;
+      border-radius: 12px;
+      padding: 15px 20px;
+      margin-bottom: 25px;
+      background-color: #1a1a1a;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      transition: background-color 0.3s ease;
+    }
+    section:hover {
+      background-color: #333333;
+    }
+        
     </style>
  <script>
       if ('scrollRestoration' in history) {
