--- a/level24.html
+++ b/level24.html
@@ -104,7 +104,7 @@
           <section>
           <h2>😸 Scratch</h2>
           <img src="7.jpeg" alt="sanat" style="max-width: 100%; border-radius: 10px;" />   
-         <p>buna yer vermezsem olmazdı</p>
+         <p>hayatımda oynadıgım en ama en iyi oyundu. hatta oyun kurucusu yapımcısı kurucusu tasarımcısı kodlayıcısını bile geçtim skorda.</p>
       </section>
 
 
