--- a/level24.html
+++ b/level24.html
@@ -112,7 +112,7 @@
         <section>
           <h2>🦅 beşiktAŞK</h2>
           <img src="8.jpeg" alt="sanat" style="max-width: 100%; border-radius: 10px;" />   
-         <p>cücüksün aşığım</p>
+         <p>iki aşkım bir kare</p>
       </section>
 
 
