--- a/level24.html
+++ b/level24.html
@@ -187,7 +187,7 @@
         <section>
   <h2>❓ Ne renk</h2>
   <img src="17.jpeg" alt="sanat" style="max-width: 100%; border-radius: 10px;" />
-  <p>yesil or yesil</p>
+  <p>dogru secenegi isaretleyiniz</p>
 
   <div id="color-quiz" style="margin-top: 10px;">
     <button class="color-option" data-color="blue">Mavi</button>
