--- a/level24.html
+++ b/level24.html
@@ -245,7 +245,11 @@
 
 
 
-        
+         <section>
+          <h2>⋆.˚✮🎧✮˚.⋆ Tıkla ⋆.˚✮🎧✮˚.⋆ </h2>
+     
+         <p> https://open.spotify.com/playlist/5sx52ClwY7vvKR3yLr7fCN  </p>
+      </section>
 
 
 
