--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@ Ben seninle tanıştığım günden beri, yanlışlarımın bile tatlı birer hi
 Senin gülüşünü duymak için dünyanın bütün saçmalıklarını yaparım.  Çünkü sen güldüğünde, içimde bir yer çok güzel oluyor. Kahkana aşığım.  Bu hayatta sana ne kadar sarılabilirsem… o kadar iyiyim konyalım.
 Senin gözlerine baktığımda hep aynı şeyi hissediyorum. Bu oyun, seninle oynandığında hayatımın en güzel oyunu.  Hatalarla, kahkahalarla, yanlış anlaşılmalarla, sürpriz zaferlerle ve sonsuz sevgiyle… <br><br>
  
-Nice seviye atlamalara, nice iddialara, nice kahkahalarına, nice scratch oyunlarına…  
-Seni çok seviyorum. Ve iyi ki doğdun, Komodo ejderim.  Seninle hayat, tüm buglara rağmen mükemmel bir oyun.
+Nice seviye atlamalara. Seni çok seviyorum ve iyi ki doğdun, komodo ejderim.  Seninle hayat, tüm buglara rağmen mükemmel bir oyun.
 Birlikte daha nice seviye atlayacağız. Ve her level’de daha da çok seveceğim seni kocam.<br><br>
 Level 25 unlocked.<br><br> Player 2 ready.<br><br> Let’s play forever. 🎮💖👾🎉
     </div>
