--- a/level24.html
+++ b/level24.html
@@ -155,7 +155,7 @@
   <img src="15.jpeg" alt="sanat" style="max-width: 100%; border-radius: 10px;" />   
   <p>
     <a href="https://youtu.be/WU6KY9Ztdnw?si=kTg2L3f-Ig8I8U1s" target="_blank" style="color: #ff4f4f; text-decoration: none; font-weight: bold;">
-      ▶️videoya gitmek için tıkla!
+      ▶️YouTube (buraya tıkla cnm askm bitanem)
     </a>
   </p>
 </section>
@@ -253,7 +253,7 @@
   <h2>⋆.˚✮🎧✮˚.⋆ Tıkla ⋆.˚✮🎧✮˚.⋆</h2>
   <p>
     <a href="https://open.spotify.com/playlist/5sx52ClwY7vvKR3yLr7fCN" target="_blank" style="color: #1DB954; text-decoration: none; font-weight: bold;">
-      🎶buraya tıkla 🎶
+     ⋆.˚✮🎧✮˚.⋆ Tıkla ⋆.˚✮🎧✮˚.⋆
     </a>
   </p>
 </section>
